# syllabus-pdf-generator

./: .gitignore  README.md  generate_pdf.py  pyproject.toml  test.py  test2.py  test3.py
syllabus_pdf_generator/: __init__.py  combine_pdf.py  generate_pdf.py  imports.py  syllabus_format.py
