[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "syllabus-pdf-generator"
version = "0.1.0"
description = "A Python package to generate and combine syllabus PDFs."
authors = [{ name = "Dhruthi V", email = "dhruthivenkateshheerguppe@gmail.com" }]
license = { text = "MIT" }
requires-python = ">=3.8"

dependencies = [
    "reportlab",  # For PDF generation
]

[tool.setuptools]
packages = ["syllabus_pdf_generator"]
